[package]
name = "doh-edge-worker"
version = "0.1.0"
edition = "2021"
authors = ["vasie1337 <vasie1337@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.1" }
worker-macros = { version = "0.8" }
base64 = "0.22"
js-sys = "0.3"
wasm-bindgen = "0.2"
futures-channel = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
futures = "0.3"
